--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>E-commerce App</title>
   </head>
-  <body id="root">
+  <body>
+    <div id="root"></div>
   </body>
 </html>
